# goit_python_web_hw_10

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
doc/: dot-env
hw10/: manage.py
hw10/doc/: dot-env
hw10/hw10/: asgi.py  settings.py  urls.py  wsgi.py
hw10/quotes/: froms.py  models.py  urls.py  utils.py  views.py
hw10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_fullname.py
hw10/quotes/static/quotes/: styles.css
hw10/quotes/templates/quotes/: base.html  index.html  tag.html  tag_edit.html
hw10/quotes/templatetags/: extract_author.py
hw10/users/: forms.py  signals.py  urls.py  views.py
hw10/users/migrations/: 0001_initial.py
hw10/users/templates/users/: delete.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  signup.html
hw10/utils/: authors.json  migration.py
scipts/: docker_build_docker-compose.cmd  docker_run_db.cmd  makemigrations.cmd  migrate.cmd  mongo2pg.cmd  runserver.cmd
utils/: authors.json  json_to_mongodb.py
